cli/templates/templates/05-tooling/testing/jest/setupTests.{{#if typescript}}ts{{else}}js{{/if}}.hbs
{{#if frontend.react}}
import '@testing-library/jest-dom';
{{/if}}

{{#if frontend.vue}}
import { config } from '@vue/test-utils';
{{/if}}

// Setup global test environment
global.console = {
  ...console,
  // Uncomment to ignore specific console messages
  // warn: jest.fn(),
  // error: jest.fn(),
};
